[project]
name = "wan"
description = "A custom node for ComfyUI that provides seamless integration with the Wan models from Alibaba Cloud Model Studio. This solution delivers cutting-edge image and video generation capabilities directly within ComfyUI, supporting both international and Mainland China regions."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests>=2.28.0", "Pillow>=9.0.0", "torch>=1.13.0", "numpy>=1.21.0", "python-dotenv>=0.19.0"]

[project.urls]
Repository = "https://github.com/ru4ls/ComfyUI_Wan"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ru4ls/ComfyUI_Wan/wiki"
"Bug Tracker" = "https://github.com/ru4ls/ComfyUI_Wan/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Wan"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

